--- a/qtify/package.json
+++ b/qtify/package.json
@@ -12,7 +12,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts start && react-scripts test",
     "build": "CI='' react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
